k8s/applications/springboot/springboot-demo/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: springboot-demo
  namespace: springboot
spec:
  selector:
    app: springboot-demo
  ports:
    - protocol: TCP
      port: 8080
      targetPort: 8080
  type: ClusterIP
